# webauthn-rp

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  README.pypi.rst  README.rst  precommit  pyproject.toml  requirements.txt  run-pre-commit-transforms  setup.cfg  setup.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  webauthn_rp.rst
docs/source/dev-docs/: bug-reporting.rst  making-changes.rst  mkrst.sh  running-linter.rst  running-tests.rst  setup-environment.rst  writing-tests.rst
docs/source/getting-started/: authenticating-credential.rst  authenticating-credentials.rst  client-configuration.rst  error-handling.rst  main-concepts.rst  registering-credential.rst  registering-credentials.rst  server-configuration.rst  using-extensions.rst
docs/source/user-docs/: attesters.rst  backend.rst  builders.rst  converters.rst  extensions.rst  parsers.rst  registrar.rst  utilities.rst  validators.rst  verifiers.rst
examples/flask/: app.py
examples/flask/templates/: app.html
examples/none-attestation/: app.html  app.py
examples/none-attestation/templates/: app.html
tests/: common.py  test_asn1.py  test_attesters.py  test_backends.py  test_builders.py  test_converters.py  test_parsers.py  test_pyasn1.py  test_registrars.py  test_utils.py  test_validators.py  test_verifiers.py
webauthn_rp/: __init__.py  asn1.py  attesters.py  backends.py  builders.py  constants.py  converters.py  errors.py  parsers.py  registrars.py  types.py  utils.py  validators.py  verifiers.py
webauthn_rp/validators/: __init__.py  keys.py
