[tool.poetry]
name = "webauthn-rp"
version = "0.0.9"
description = "WebAuthn-RP is a Python 3 library to manage credentials that conform to the Web Authentication specification."
authors = ["enceladus-rex"]
readme = "README.pypi.rst"
repository = "https://github.com/enceladus-rex/webauthn-rp"
documentation = "https://webauthn-rp.readthedocs.io/en/latest/"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Security :: Cryptography",
]

[tool.poetry.dependencies]
python = "^3.6.1"
pyasn1 = "~=0.4.8"
cryptography = "~=2.9.2"
cbor2 = "~=5.1.0"

[tool.poetry.extras]
examples = ["Flask~=1.1.2", "Flask-SQLAlchemy~=2.4.3"]

[tool.poetry.dev-dependencies]
mypy = "~=0.782"
codecov = "~=2.0"
yapf = "~=0.30"
pytest-cov = "~=2.7"
pytest = "~=5.4"
isort = "~=5.0"
coverage = "~=5.1"
pre-commit = "~=2.6"
Sphinx = "~=3.1.2"
sphinx_rtd_theme = "~=0.5.0"
tox = "~=3.16.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
